--- a/zero-to-deep-learning.cabal
+++ b/zero-to-deep-learning.cabal
@@ -15,11 +15,11 @@ cabal-version:       >=1.10
 
 library
   hs-source-dirs:      src
-  exposed-modules:     Lib
+  exposed-modules:     Perceptron
   build-depends:       base >= 4.7 && < 5
   default-language:    Haskell2010
 
-executable zero-to-deep-learning-exe
+executable zero-to-deep-learning
   hs-source-dirs:      app
   main-is:             Main.hs
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
