--- a/stack.yaml
+++ b/stack.yaml
@@ -39,7 +39,9 @@ packages:
 - '.'
 # Dependency packages to be pulled from upstream that are not in the resolver
 # (e.g., acme-missiles-0.3)
-extra-deps: []
+extra-deps:
+- gnuplot-0.5.4.1
+- data-accessor-transformers-0.2.1.7
 
 # Override default flag values for local packages and extra-deps
 flags: {}
