--- a/zero-to-deep-learning.cabal
+++ b/zero-to-deep-learning.cabal
@@ -25,6 +25,7 @@ executable zero-to-deep-learning
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   build-depends:       base
                      , zero-to-deep-learning
+                     , gnuplot
   default-language:    Haskell2010
 
 test-suite zero-to-deep-learning-test
