--- a/zero-to-deep-learning.cabal
+++ b/zero-to-deep-learning.cabal
@@ -18,6 +18,7 @@ library
   exposed-modules:     Perceptron
                      , NeuralNetwork
   build-depends:       base >= 4.7 && < 5
+                     , hmatrix
   default-language:    Haskell2010
 
 executable zero-to-deep-learning
@@ -27,6 +28,7 @@ executable zero-to-deep-learning
   build-depends:       base
                      , zero-to-deep-learning
                      , gnuplot
+                     , hmatrix
   default-language:    Haskell2010
 
 test-suite zero-to-deep-learning-test
