--- a/zero-to-deep-learning.cabal
+++ b/zero-to-deep-learning.cabal
@@ -24,6 +24,7 @@ library
 executable zero-to-deep-learning
   hs-source-dirs:      app
   main-is:             Main.hs
+  other-modules:       Ch3
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   build-depends:       base
                      , zero-to-deep-learning
