rename project name to deep-learning-from-scratch.

--- a/deep-learning-from-scratch.cabal
+++ b/deep-learning-from-scratch.cabal
@@ -1,8 +1,8 @@
-name:                zero-to-deep-learning
+name:                deep-learning-from-scratch
 version:             0.1.0.0
 synopsis:            Initial project template from stack
 description:         Please see README.md
-homepage:            https://github.com/githubuser/zero-to-deep-learning#readme
+homepage:            https://github.com/githubuser/deep-learning-from-scratch#readme
 license:             BSD3
 license-file:        LICENSE
 author:              Author name here
@@ -21,28 +21,28 @@ library
                      , hmatrix
   default-language:    Haskell2010
 
-executable zero-to-deep-learning
+executable deep-learning-from-scratch
   hs-source-dirs:      app
   main-is:             Main.hs
   other-modules:       Ch3
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   build-depends:       base
-                     , zero-to-deep-learning
+                     , deep-learning-from-scratch
                      , gnuplot
                      , hmatrix
                      , yaml
                      , bytestring
   default-language:    Haskell2010
 
-test-suite zero-to-deep-learning-test
+test-suite deep-learning-from-scratch-test
   type:                exitcode-stdio-1.0
   hs-source-dirs:      test
   main-is:             Spec.hs
   build-depends:       base
-                     , zero-to-deep-learning
+                     , deep-learning-from-scratch
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   default-language:    Haskell2010
 
 source-repository head
   type:     git
-  location: https://github.com/githubuser/zero-to-deep-learning
+  location: https://github.com/githubuser/deep-learning-from-scratch
