--- a/deep-learning-from-scratch.cabal
+++ b/deep-learning-from-scratch.cabal
@@ -17,8 +17,14 @@ library
   hs-source-dirs:      src
   exposed-modules:     Perceptron
                      , NeuralNetwork
+                     , MNIST
   build-depends:       base >= 4.7 && < 5
                      , hmatrix
+                     , zlib
+                     , http-conduit
+                     , attoparsec
+                     , bytestring
+                     , directory
   default-language:    Haskell2010
 
 executable deep-learning-from-scratch
