--- a/deep-learning-from-scratch.cabal
+++ b/deep-learning-from-scratch.cabal
@@ -29,6 +29,8 @@ library
                      , containers
                      , filepath
                      , directory
+                     , random
+                     , yaml
   default-language:    Haskell2010
 
 executable deep-learning-from-scratch
