--- a/deep-learning-from-scratch.cabal
+++ b/deep-learning-from-scratch.cabal
@@ -31,6 +31,7 @@ library
                      , directory
                      , random
                      , yaml
+                     , bifunctors
   default-language:    Haskell2010
 
 executable deep-learning-from-scratch
