--- a/deep-learning-from-scratch.cabal
+++ b/deep-learning-from-scratch.cabal
@@ -32,6 +32,7 @@ library
                      , random
                      , yaml
                      , bifunctors
+                     , lens
   default-language:    Haskell2010
 
 executable deep-learning-from-scratch
@@ -46,6 +47,7 @@ executable deep-learning-from-scratch
                      , hmatrix
                      , yaml
                      , bytestring
+                     , doctest
   default-language:    Haskell2010
 
 test-suite deep-learning-from-scratch-test
