--- a/deep-learning-from-scratch.cabal
+++ b/deep-learning-from-scratch.cabal
@@ -18,6 +18,7 @@ library
   exposed-modules:     Perceptron
                      , NeuralNetwork
                      , MNIST
+                     , SimpleNet
   build-depends:       base >= 4.7 && < 5
                      , hmatrix
                      , zlib
